remove geo
